# pcl_lib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  WARP.md
analysis/: iterative_performance_analysis.py  pyproject.toml
benchmarks/: MotionCompensation.cpp  Transform.cpp  bench_icp.cpp  cpu_pipeline_timings.cpp  gpu_pipeline_timings.cpp  stats.hpp  timer.hpp
datasets/: LoadKitti360Run.hpp
include/pcl_lib/: Convert.hpp  Pipeline.hpp  PointUtils.hpp  Threshold.hpp  VoxelUtils.hpp
include/pcl_lib/bags/: Ros2LidarImuBag.hpp
include/pcl_lib/cuda/: GPURegistration.cuh  GPUVoxelHashMap.cuh  LieAlgebra.cuh  utils.cuh
include/pcl_lib/ekf/: Esekf.hpp  Noise.hpp  State.hpp
include/pcl_lib/visualization/: ekf_visualizer.hpp
run_config/: backpack_full_lidar.yaml  backpack_single_lidar.yaml
scripts/: Kitti360Loader.hpp  SingleLidarBagReader.cpp  odom_read_into_cloud_save.cpp
src/: Convert.hpp  LFUCache.hpp  MotionCompensation.hpp  Pipeline.cpp  Pipeline.hpp  PointToVoxel.hpp  PointUtils.hpp  Registration.cpp  Registration.hpp  Threshold.hpp  VoxelMap.cpp  VoxelMap.hpp  VoxelUtils.hpp  bench_icp.cpp  lid_odom_node.cpp  tf2_sophus.hpp
src/cuda/: CudaEigenTypes.cuh  GPUPipeline.cuh  GPURegistration.cu  GPURegistration.cuh  GPUVoxelHashMap.cu  GPUVoxelHashMap.cuh  LieAlgebra.cuh  MotionCompensation.cu  MotionCompensation.cuh  Transform.cu  Transform.cuh  pointUtils.hpp
src/ekf/: Esekf.cpp  Esekf.hpp  IterEsekf.cpp
src/thrust/: GPURegistration.cu  GPURegistration.cuh
test/: MotionCompensation.cpp  TestGpuVoxelHashMap.cpp  TestMotionCompensation.cpp  TestRegistrationEquivalent.cpp  TestUtils.hpp
visualization/: odom_visualizer.hpp
